# YgTradingVisualizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  pyproject.toml
app/src/ygtv/app/: __init__.py  __main__.py  factory.py
app/src/ygtv/app/pages/: live.py  overview.py  regression.py  tearsheet.py
app/tests/: test_app_smoke.py  test_entrypoint.py  test_live_page.py
docs/superpowers/plans/: 2026-06-03-ygtradingvisualizer-repo-a.md
docs/superpowers/specs/: 2026-06-03-ygtradingvisualizer-design.md
