[project]
name = "ygtradingvisualizer"
version = "0.0.0"
description = "Source-agnostic trading-performance visualization layer (monorepo root — not installable)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Yaniv Gorali", email = "yanivg@gmail.com" }]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/contract",
    # "packages/components",  # added in later units
    # "packages/sources",     # added in later units
    # "app",                  # added in later units
]

[tool.uv.sources]
ygperf = { workspace = true }
# ygtv-components = { workspace = true }  # added in later units
# ygtv-sources = { workspace = true }     # added in later units

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ygperf",
    # "ygtv-components",  # added in later units
    # "ygtv-sources",     # added in later units
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "PT"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["F401", "F811"]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
