[project]
name = "ygtradingvisualizer"
version = "0.0.0"
description = "Source-agnostic trading-performance visualization layer (monorepo root — not installable)."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Yaniv Gorali", email = "yanivg@gmail.com" }]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/contract",
    "packages/components",
    "packages/sources",
    "app",
]

[tool.uv.sources]
ygperf = { workspace = true }
ygtv-components = { workspace = true }
ygtv-sources = { workspace = true }
ygtv-app = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "tzdata>=2024.1",
    "ygperf",
    "ygtv-components",
    "ygtv-sources",
    "ygtv-app",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "PT"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["F401", "F811"]

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
