[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ygtv-app"
version = "0.1.0"
description = "Generic multipage Dash shell rendering any ygperf Source."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ygperf",
    "ygtv-components",
    "ygtv-sources",
    "dash>=3.0",
    "dash-bootstrap-components>=1.6",
    "polars>=1.0",
]

[project.optional-dependencies]
quantstats = ["quantstats>=0.0.62"]

[tool.hatch.build.targets.wheel]
packages = ["src/ygtv"]
