[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ygtv-app"
version = "0.3.0"
description = "Generic multipage Dash shell rendering any ygperf Source."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ygperf",
    "ygtv-components",
    "ygtv-sources",
    "dash>=3.0",
    "dash-ag-grid>=31",
    "dash-bootstrap-components>=1.6",
    "polars>=1.0",
]

[project.optional-dependencies]
# Optional tear-sheet export (Phase 2); intentionally not imported by core.
quantstats = ["quantstats>=0.0.62"]

[tool.hatch.build.targets.wheel]
packages = ["src/ygtv"]
